redhat.mdita.dtd/test/negative/neg_cals_table.dita
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE topic PUBLIC "-//RED HAT//DTD MDITA 2.0 Topic//EN" "mditaTopic.dtd">
<topic id="test-cals">
  <title>CALS table test</title>
  <body>
    <table>
      <tgroup cols="2">
        <tbody>
          <row><entry>A</entry><entry>B</entry></row>
        </tbody>
      </tgroup>
    </table>
  </body>
</topic>
